--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
+    "sass-loader": "^10.1.1",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0"
@@ -30,6 +31,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "sass": "^1.32.10",
     "vue-jest": "^5.0.0-0"
   },
   "description": "An Rotaract project"
